# MobileGLES-Wrapper

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.gradle
.github/scripts/: fetch-trace-fixture-lfs.sh
.github/workflows/: Build.yml  apk.yml  build-android.yml  ci.yml  cmake-multi-platform.yml  retrace.yml  test.yml
MobileGL/MG_Backend/: BackendObject.cpp  BackendObject.h
MobileGL/MG_Backend/DirectGLES/: BackendObject_DirectGLES.cpp  BackendObject_DirectGLES.h  DirectGLES.cpp  DirectGLES.h  Managers.cpp  Managers.h  Utils.cpp  Utils.h
MobileGL/MG_Impl/: GetProcAddress.cpp
MobileGL/MG_Test/: CMakeLists.txt
MobileGL/MG_Test/EGLState/: CMakeLists.txt  EGLStateTest.cpp
MobileGlues-cpp/: CMakeLists.txt  includes.h
MobileGlues-cpp/config/: settings.cpp
MobileGlues-cpp/egl/: loader.cpp
MobileGlues-cpp/gl/: ComputeShader.cpp  ComputeShader.h  buffer.cpp  buffer.h  drawing.cpp  drawing.h  framebuffer.cpp  getter.cpp  getter.h  gl.cpp  gl_native.cpp  gl_stub.cpp  log.cpp  mg.cpp  mg.h  multidraw.cpp  pixel.cpp  pixel.h  program.cpp  shader.cpp  state.cpp  state.h  texture.cpp
MobileGlues-cpp/gles/: loader.cpp  loader.h
android-plugin/: TRACE_REPLAY.md  build.gradle  run-avd-ci.sh  trace-replay-ci.sh
android-plugin/app/: build.gradle
tools/trace_replay/: CMakeLists.txt  README.md  apitrace_glproc_mobilegl.cpp  apitrace_glws_egl.cpp  macos_cgs_surface_bounds.cpp  render_retrace_summary.mjs  run_android_retrace_local.py  run_openra_replay.cmake  run_trace_case.cmake  trace_cases.json  trace_cases.py  trace_replay_cli.cpp
(+70 files in other folders)
